manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-nginxsite
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-nginxsite
  template:
    metadata:
      labels:
        app: rollout-nginxsite
    spec:
      containers:
        - name: nginxsite
          image: chriswood123/nginxsite:b-1.25
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  strategy:
    blueGreen:
      activeService: rollout-nginxsite-active
      previewService: rollout-nginxsite-preview
      autoPromotionEnabled: false
