manifests/preview-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rollout-nginxsite-preview
spec:
  selector:
    app: rollout-nginxsite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
