manifests/active-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: active-ingress
spec:
  rules:
    - host: active.nginx.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rollout-nginxsite-active
                port:
                  number: 80
  ingressClassName: nginx
